# definit-db

./: .gitignore  .importlinter  README.md  main.py  prompts.md  pyproject.toml  requirements-dev.txt  ruff.toml
.github/workflows/: lint-imports.yml  pytest.yml  ruff.yml
docs/: defs.json  index.html
docs/assets/: index-5eSAgH60.js  index-B8Qx989S.js  index-BKIdjhrE.js  index-BeiX11w7.js  index-Bq93mDRE.js  index-CwhueUO_.js  index-Czs7Lh7v.js  index-g_3NZCsD.js
src/definit_db/: __init__.py  serialize.py
src/definit_db/data/field/: __init__.py  index.py
src/definit_db/data/field/computer_science/: __init__.py  index.py
src/definit_db/data/field/computer_science/definitions/algorithms/: bit_manipulation.py  divide_and_conquer.py  greedy_algorithm.py
src/definit_db/data/field/computer_science/definitions/data_structure/: abstract_data_type.py  bit_field.py  map.py  (+2 more)
src/definit_db/data/field/mathematics/: __init__.py  index.py
src/definit_db/data/track/: __init__.py  track.py
src/definit_db/data/track/definitions/: algorithms.py  data_structures.py  track_definitions_abstract.py
src/definit_db/definition/: definition.py  definition_key.py
src/definit_db_md/data/field/computer_science/: index.md
src/definit_db_md/data/field/mathematics/: index.md
src/test/: test_index.py  test_track.py  utils.py
test/: conftest.py  test_index.py  test_serialize.py
visualization/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
visualization/scripts/: gen-data.mjs
visualization/src/: main.ts  types.ts
(+325 files in other folders)
