[project]
name = "definit-db"
version = "0.5.0"
description = "DefinIT database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "definit==0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "import-linter>=2.9",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["definit_db"]
include-package-data = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.setuptools.package-data]
"definit_db" = ["*.py", "data_md/**/*"]

[tool.uv.sources]
definit = { path = "../definit/dist/definit-0.4.1-py3-none-any.whl" }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
